rename website title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <link rel="icon" type="image/svg+xml" href="/daily-questions.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>365 questions</title>
+    <title>Daily questions</title>
 </head>
 <body>
 <div id="app"></div>
