--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <link rel="icon" type="image/svg+xml" href="/daily-questions.svg"/>
+    <link rel="manifest" href="public/manifest.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Daily questions</title>
 </head>
