--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="/daily-questions.svg"/>
-    <link rel="manifest" href="/manifest.webmanifest">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Daily questions</title>
-</head>
-<body>
-<div id="app"></div>
-<script type="module" src="/src/main.ts"></script>
-</body>
+    <head>
+        <meta charset="UTF-8"/>
+        <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
+        <meta name="theme-color" media="(prefers-color-scheme: dark)"  content="#242424">
+        <link rel="icon" type="image/svg+xml" href="/daily-questions.svg"/>
+        <link rel="manifest" href="/manifest.webmanifest"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <title>Daily questions</title>
+    </head>
+    <body>
+        <div id="app"></div>
+        <script type="module" src="/src/main.ts"></script>
+    </body>
 </html>
