configure seo properties

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
         <link rel="icon" type="image/svg+xml" href="/daily-questions.svg"/>
         <link rel="manifest" href="/manifest.webmanifest"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>Daily questions</title>
+        <meta name="description" content="Answer daily questions to keep track of your year.">
+        <title>Daily Questions</title>
+        <script type="application/ld+json">
+            {
+                "@context" : "https://schema.org",
+                "@type" : "WebSite",
+                "name" : "Daily Questions",
+                "url" : "https://daily-questions.up.railway.app/"
+            }
+        </script>
     </head>
     <body>
         <div id="app"></div>
