--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
         <meta name="theme-color" media="(prefers-color-scheme: dark)"  content="#242424">
         <link rel="icon" type="image/svg+xml" href="/daily-questions.svg"/>
-        <link rel="manifest" href="/manifest.webmanifest"/>
+        <link rel="manifest" href="/app.webmanifest"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta name="description" content="Answer daily questions to keep track of your year.">
         <title>Daily Questions</title>
