add opengraph tags

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
                 "url" : "https://daily-questions.up.railway.app/"
             }
         </script>
+        <meta property="og:image" content="https://repository-images.githubusercontent.com/912532428/3ad035c8-5cb9-4db0-bb31-98b9c40003dc" />
+        <meta property="og:image:alt" content="Answer daily questions to keep track of your year" />
+        <meta property="og:site_name" content="Daily Questions" />
+        <meta property="og:type" content="object" />
+        <meta property="og:title" content="Daily Questions: Answer daily questions to keep track of your year" />
+        <meta property="og:url" content="https://daily-questions.up.railway.app" />
+        <meta property="og:description" content="Answer daily questions to keep track of your year." />
     </head>
     <body>
         <div id="app"></div>
