configure apple metadata to display a custom icon to iOS devices

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <meta name="twitter:card" content="summary_large_image"/>
         <meta name="twitter:title" content="Answer daily questions to keep track of your year"/>
         <meta name="twitter:description" content="Track your year, day by day."/>
+        <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png"/>
+        <meta name="apple-mobile-web-app-title" content="Daily Questions"/>
     </head>
     <body>
         <div id="app"></div>
